update pdf and about

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ minima:
   social_links:
     github:
       - lgordon2
-      - lewgordon
+      - lew-gordon
     twitter: lgordon2
     linkedin: lewis-gordon-10674919
 
